# bossy

./: .env  .env.dev  .gitignore  Makefile  code-style.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  structure-claude-v1.md  structure-claude-v2.md  structure-claude-v3.md  structure-claude.md  structure-gemini-v1.md  structure-jules.md  structure.md  technical-task.md  technical_task.txt
backend/: .env.example  .env.prod  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: __init__.py  env.py  script.py.mako
backend/alembic/versions/: README.md  __init__.py
backend/app/: .gitignore  __init__.py  main.py  package-lock.json  package.json  tsconfig.json
backend/app/src/: __init__.py  app.module.ts  main.ts
backend/app/src/api/: __init__.py  dependencies.py  exceptions.py  middleware.py  router.py
backend/app/src/api/admin/: admin_router.py
backend/app/src/api/graphql/: __init__.py  context.py  dataloaders.py  directives.py  scalars.py  schema.py
backend/app/src/api/v1/: __init__.py  router.py
backend/app/src/config/: __init__.py  celery.py  config.module.ts  config.service.ts  database.py  elasticsearch.py  firebase.py  logging.py  redis.py  security.py  settings.py
backend/app/src/core/: __init__.py  base.py  constants.py  decorators.py  dependencies.py  dicts.py  events.py  exceptions.py  i18n.py  middleware.py  permissions.py  utils.py  validators.py
backend/app/src/core/middleware/: i18n_middleware.py
backend/app/src/locales/: README.md
backend/app/src/locales/en/: messages.json  translations.json
backend/app/src/locales/uk/: messages.json  translations.json
backend/app/src/migrations/: __init__.py  env.py  script.py.mako
backend/app/src/migrations/versions/: README.md  __init__.py
backend/app/src/models/: __init__.py  base.py  mixins.py
backend/app/src/models/auth/: __init__.py  session.py  token.py  user.py
backend/app/src/models/bonuses/: __init__.py  account.py  bonus.py  bonus_adjustment.py  bonus_rule.py  reward.py  transaction.py
backend/app/src/models/dictionaries/: __init__.py  base.py  base_dict.py  bonus_type.py  bonus_types.py  calendars.py  group_type.py  group_types.py  integration.py  messengers.py  status.py  statuses.py  task_type.py  task_types.py  user_role.py  user_roles.py  user_type.py  user_types.py
backend/app/src/models/files/: __init__.py  avatar.py  file.py
backend/app/src/models/gamification/: __init__.py  achievement.py  badge.py  level.py  rating.py  user_achievement.py  user_level.py
backend/app/src/models/groups/: __init__.py  group.py  invitation.py  membership.py  poll.py  poll_option.py  poll_vote.py  settings.py  template.py
backend/app/src/models/notifications/: __init__.py  delivery.py  notification.py  template.py
backend/app/src/models/reports/: __init__.py  report.py
backend/app/src/models/system/: __init__.py  cron.py  health.py  monitoring.py  settings.py
backend/app/src/models/tasks/: __init__.py  assignment.py  completion.py  dependency.py  event.py  proposal.py  review.py  task.py
backend/app/src/models/teams/: __init__.py  membership.py  team.py
backend/app/src/repositories/: __init__.py  base.py
backend/app/src/repositories/auth/: __init__.py  refresh_token_repository.py  session.py  session_repository.py  token.py  user.py  user_repository.py
backend/app/src/repositories/bonuses/: __init__.py  account.py  account_transaction_repository.py  bonus_rule_repository.py  reward.py  reward_repository.py  transaction.py  user_account_repository.py
backend/app/src/repositories/dictionaries/: __init__.py  base_dict.py  base_dict_repository.py  bonus_type.py  bonus_type_repository.py  calendar_provider_repository.py  group_type.py  group_type_repository.py  integration.py  messenger_platform_repository.py  status.py  status_repository.py  task_type.py  task_type_repository.py  user_role.py  user_role_repository.py  user_type.py  user_type_repository.py
backend/app/src/repositories/files/: __init__.py  avatar.py  file.py  file_record_repository.py  user_avatar_repository.py
backend/app/src/repositories/gamification/: __init__.py  achievement.py  badge.py  badge_repository.py  level.py  level_repository.py  rating.py  rating_repository.py  user_achievement_repository.py  user_level.py  user_level_repository.py
backend/app/src/repositories/groups/: __init__.py  group.py  group_repository.py  invitation.py  invitation_repository.py  membership.py  membership_repository.py  poll.py  settings.py  settings_repository.py  template.py
backend/app/src/repositories/notifications/: __init__.py  delivery.py  delivery_attempt_repository.py  notification.py  notification_repository.py  notification_template_repository.py  template.py  template_repository.py
backend/app/src/repositories/reports/: __init__.py  report.py
backend/app/src/repositories/system/: __init__.py  cron.py  health.py  health_repository.py  monitoring.py  monitoring_repository.py  settings.py  settings_repository.py
backend/app/src/repositories/tasks/: __init__.py  assignment.py  assignment_repository.py  completion.py  completion_repository.py  dependency.py  event_repository.py  proposal.py  review.py  review_repository.py  task.py  task_repository.py
backend/app/src/schemas/: __init__.py  base.py
backend/app/src/services/: __init__.py  base.py
backend/app/src/static/: .gitkeep
backend/app/src/tasks/: __init__.py  base.py  scheduler.py
backend/app/src/templates/: __init__.py
backend/app/src/utils/: __init__.py  converters.py  formatters.py  generators.py  hash.py  helpers.py  security.py  validators.py
backend/app/src/workers/: __init__.py  base_task.py  celery_app.py  integration_tasks.py  notification_tasks.py  system_tasks.py
backend/scripts/: __init__.py  cleanup_temp_data.py  create_superuser.py  create_system_users.py  db_backup.py  db_restore.py  generate_openapi_spec.py  run_linters.py  run_migrations.py  run_seed.py  run_server.py  run_tests.py
docs/: README.md
(+342 files in other folders)
